# nil

./: .dockerignore  .gitignore  Cargo.toml  README.md  RELEASE.md  RETAINED_DATA.md  THREAT_MODEL.md  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  client-build.yml  dataplane-e2e.yml  deploy-production.yml  deploy-staging.yml  gso-bench.yml  release-attest.yml  release-images.yml  release-sign.yml  release.yml  reproducibility.yml
client/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
client/apple/: .gitignore  Host-Info.plist  Host.entitlements  build-engine.sh  project.yml
client/apple/Host/: main.swift
client/mobile/: README.md
client/scripts/: embed-systemextension.sh
client/src/: App.css  App.tsx  components.tsx  screens.test.tsx  screens.tsx
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  trust_bundle.rs
client/src-tauri/capabilities/: mobile.json
client/src-tauri/src/: account.rs  authstore.rs  config.rs  engine.rs  extension.rs  killswitch.rs  leakguard.rs  lib.rs  main.rs  mobile.rs  netpolicy.rs  securestore.rs  splittunnel.rs  tokenrefill.rs  tokens.rs  tokenstore.rs  trust.rs
client/src-tauri/src/securestore/: aes.rs  android.rs  apple.rs  linux.rs  windows.rs
client/src-tauri/tests/: subscription_flow.rs
client/src/lib/: commands.ts  types.ts
client/src/test/: setup.ts
client/trust/: README.md  bundle.example.json
crates/nil-android/: Cargo.toml  DEVICE_VERIFY.md  README.md  build.rs
crates/nil-android/android/: NilNative.kt  NilSecureStorePlugin.kt  NilVpnPlugin.kt  NilVpnService.kt  VpnConsentActivity.kt  nil-android.gradle.kts
crates/nil-android/src/: lib.rs
crates/nil-apple/: Cargo.toml  DEVICE_VERIFY.md  MACOS_DEVICE_VERIFY.md  README.md  build.rs
crates/nil-apple/apple/: App-iOS.entitlements  NILVPN-App.entitlements  NilControlBridge.swift  NilVpnPlugin.swift  PacketTunnel-Bridging-Header.h  PacketTunnel-Info.plist  PacketTunnel-iOS-Info.plist  PacketTunnel-iOS.entitlements  PacketTunnel.entitlements  PacketTunnelMain.swift  PacketTunnelProvider.swift
crates/nil-apple/include/: nil_apple.h
crates/nil-apple/src/: lib.rs
crates/nil-attest/: Cargo.toml
crates/nil-attest/examples/: tdx_policy.rs
crates/nil-attest/src/: error.rs  lib.rs  policy.rs  ratls.rs  testkit.rs
crates/nil-attest/src/report/: mod.rs  sevsnp.rs  tdx.rs
crates/nil-attest/tests/: appraise_synthetic.rs  sevsnp_kat.rs  tdx_kat.rs
crates/nil-cli/: Cargo.toml
crates/nil-cli/src/: main.rs
crates/nil-coordinator/: Cargo.toml
crates/nil-coordinator/src/: api.rs  client_ip.rs  config.rs  main.rs  nullifier.rs  pathsel.rs  ratelimit.rs
crates/nil-core/: Cargo.toml
crates/nil-core/src/: checksum.rs  durable.rs  grant.rs  lib.rs  net.rs
crates/nil-crypto/: Cargo.toml
crates/nil-crypto/src/: error.rs  lib.rs  psk.rs  token.rs  translog.rs
crates/nil-crypto/src/account/: auth.rs  derive.rs  encoding.rs  mod.rs  phrase.rs  recovery.rs  words.rs
crates/nil-datapath/: Cargo.toml
crates/nil-datapath/src/: android.rs  launch.rs  lib.rs  linux.rs  macos.rs  redeem.rs  windows.rs
crates/nil-ios/: Cargo.toml  DEVICE_VERIFY.md  README.md  build.rs
crates/nil-ios/apple/: PacketTunnelProvider.swift
crates/nil-ios/include/: nil_ios.h
crates/nil-ios/src/: lib.rs
crates/nil-node/: Cargo.toml
crates/nil-node/examples/: gso_bench.rs
crates/nil-node/src/: amneziawg.rs  attest.rs  cert.rs  config.rs  devtrace.rs  exit.rs  grant_replay.rs  gso.rs  hw.rs  main.rs  pool.rs  pqwg.rs  reality.rs  retry.rs  server.rs  wstunnel.rs
crates/nil-portal/: Cargo.toml
crates/nil-portal/src/: app.rs  billing.rs  cards.rs  client_ip.rs  hsm.rs  main.rs  mint.rs  monero.rs  ratelimit.rs  security.rs  state.rs  subscription.rs  tokens.rs
crates/nil-portal/src/account/: auth.rs  error.rs  handlers.rs  mod.rs  model.rs
crates/nil-portal/src/store/: file.rs  memory.rs  mod.rs  postgres.rs
crates/nil-proto/: Cargo.toml
crates/nil-proto/src/: account.rs  lib.rs  path.rs  token.rs
crates/nil-provision/: Cargo.toml
crates/nil-provision/src/: main.rs
crates/nil-transport/: Cargo.toml
crates/nil-transport/examples/: attest_probe.rs
crates/nil-transport/src/: amneziawg.rs  cascade.rs  connectip.rs  daita.rs  lib.rs  loopback.rs  path.rs  pqwg.rs  reality.rs  selector.rs  transport.rs  udpip.rs  wstunnel.rs
crates/nil-transport/src/masque/: fingerprint.rs  mod.rs
crates/nil-transport/tests/: fast_path_bench.rs  masque_attest.rs  no_pii_in_logs.rs  reality_roundtrip.rs  wstunnel_roundtrip.rs
deploy/: Dockerfile  Dockerfile.coordinator  Dockerfile.e2e  Dockerfile.node  Dockerfile.portal  Dockerfile.repro  IMAGES.md  PORTAL-HSM.md  PROXY-PRIVACY.md  compose.cascade.yaml  compose.coordinator.yaml  compose.e2e.yaml  compose.multiclient.yaml  compose.portal.yaml  compose.pqwg.yaml  compose.trustsplit-pq.yaml  compose.trustsplit.yaml  compose.wstunnel.yaml  compose.yaml  publish-measurement.sh  reproducible-build.sh  verify-attest.sh  verify-cascade.sh  verify-client-macos.sh  verify-e2e.sh  verify-frontend-licenses.sh  verify-hsm.sh  verify-image.sh  verify-leaks.sh  verify-macos-se-build.sh  verify-macos-vm.sh  verify-multiclient.sh  verify-nested.sh  verify-no-source-replace.sh  verify-proxy-privacy.sh  verify-release-config.sh  verify-trustsplit-pq.sh  verify-trustsplit.sh  verify-wstunnel.sh  verify.sh  (+1 more)
deploy/caddy/: Caddyfile  Caddyfile.coordinator
deploy/coordinator/: registry.json.example
deploy/env/: coordinator-staging.env.example  coordinator.env.example  macos-e2e.env.example  portal-staging.env.example  portal.env.example
deploy/monitoring/: README.md  alertmanager.yml  alerts.yml  blackbox.yml  compose.monitoring.yaml  prometheus.yml
