# NIL VPN — Cargo workspace (Phase 0 skeleton).
# A single workspace produces the three services (Portal/Coordinator/Node) and the
# Tauri client's Rust core, all sharing nil-core/nil-proto/nil-transport/nil-crypto/
# nil-attest so the client and the node negotiate the exact same wire format from the
# exact same code (architecture spec §3).
[workspace]
resolver = "2"
members = [
    "crates/nil-core",
    "crates/nil-proto",
    "crates/nil-crypto",
    "crates/nil-transport",
    "crates/nil-attest",
    "crates/nil-portal",
    "crates/nil-coordinator",
    "crates/nil-node",
    "crates/nil-datapath",
    "crates/nil-cli",
    "crates/nil-provision",
    "crates/nil-android",
    "crates/nil-ios",
    "client/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Nil VPN"]
homepage = "https://nilvpn.com"
rust-version = "1.77"

# Versions pinned once, here, so every crate stays in lockstep.
[workspace.dependencies]
# --- Active in Phase 0 ---
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }

# Crypto (nil-crypto, Phase 0 account derivation)
bip39 = "2"
sha2 = "0.10"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
data-encoding = "2"            # Crockford base32 for account numbers / recovery codes

# --- Phase 1: MASQUE/QUIC datapath (quiche vendors BoringSSL → needs cmake/clang) ---
quiche     = "0.22"                    # default MASQUE/QUIC transport (Cloudflare)
tun-rs     = { version = "2", features = ["async_tokio"] }  # TUN device (Linux/macOS)
rcgen      = "0.13"                    # self-signed dev TLS cert for nil-node (Phase 1)
tokio-util = { version = "0.7", features = ["rt"] }          # CancellationToken for pumps
getrandom  = "0.2"                     # QUIC source connection IDs

# --- Phase 2: TEE attestation (nil-attest) — pure-Rust, no extra system libs ---
sev         = { version = "7", default-features = false, features = ["snp", "crypto_nossl"] }  # SEV-SNP report + AMD ARK/ASK chain (builtin roots, offline, pure-Rust)
dcap-qvl    = { version = "0.5", default-features = false, features = ["std", "rustcrypto", "default-x509"] }  # Intel TDX DCAP quote verify (pure-Rust, no ring, offline)
x509-parser = "0.16"                   # parse the RA-TLS leaf cert + custom report extension

# --- Phase 2: PQ hybrid PSK (nil-crypto) — pure-Rust KEMs ---
ml-kem = "0.3"                         # ML-KEM-1024 (FIPS 203), forward secrecy half
classic-mceliece-rust = { version = "3", features = ["mceliece460896", "alloc"] }  # Classic McEliece 460896, authentication half

# --- Declared for forward intent; activated in their phase step.
boringtun = "0.7"                      # inner WireGuard Noise core (PQ PSK over MASQUE)

# --- Phase 3: unlinkable payments (Privacy Pass blind tokens) ---
blind-rsa-signatures = "0.17"          # RFC 9474 blind RSA signatures (issuer private / verifier public)
# quinn = "0.11"                       # prototyping alt QUIC

# --- Phase 4: wstunnel cascade rung (WireGuard over WebSocket-over-TLS) ---
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }  # WebSocket client/server
tokio-rustls = "0.26"                  # TLS for the WS envelope (rustls, the project standard)
rustls = "0.23"                        # custom no-verify config (security is the inner WireGuard)
futures-util = "0.3"                   # split the WebSocket stream for the bidirectional pump

# --- Clustered durable stores (optional `postgres` feature on nil-portal/nil-coordinator) ---
# Off by default: the default build ships the file-backed durable stores and pulls no DB driver.
# Production wires a rustls TLS connector (the connection is the deployment's responsibility).
tokio-postgres = "0.7"                 # async Postgres client for the clustered account/nullifier stores

# Internal crates (path deps — versioned together; explicit version silences
# cargo-deny's wildcard-path warning).
nil-core = { path = "crates/nil-core", version = "0.1.0" }
nil-proto = { path = "crates/nil-proto", version = "0.1.0" }
nil-crypto = { path = "crates/nil-crypto", version = "0.1.0" }
nil-transport = { path = "crates/nil-transport", version = "0.1.0" }
nil-attest = { path = "crates/nil-attest", version = "0.1.0" }
nil-datapath = { path = "crates/nil-datapath", version = "0.1.0" }

[profile.release]
strip = true
# One codegen unit → deterministic output ordering. The default (16) parallelizes codegen and
# reorders symbols/sections run-to-run, breaking byte-for-byte reproducibility — the precondition
# for a stable nil-node measurement (deploy/reproducible-build.sh). Slower, but the reproducibly
# built binary must match the one whose measurement is pinned + appraised.
codegen-units = 1

# Build the heavy post-quantum KEM crates OPTIMIZED even in the dev/test profile. Unoptimized
# Classic McEliece keygen/encapsulation is ~100x slower (tens of seconds), which made the PQ
# handshake tests (e.g. mismatched_pq_psk_fails_the_wstunnel_handshake) flake on their timeout under
# CI parallel-test CPU contention — twice, even after widening the bounds. Optimizing just these two
# dependency crates makes the crypto run at release speed in tests while our own crates stay
# unoptimized (fast compile). This affects ONLY the dev profile; the `release` profile above — and
# therefore the reproducible-build measurement — is unchanged.
[profile.dev.package.classic-mceliece-rust]
opt-level = 3
[profile.dev.package.ml-kem]
opt-level = 3
