[package]
name = "nil-client"
default-run = "nil-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN client (Tauri v2) — User plane: drives account, control, and the transport engine."

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin on Windows
# (see https://github.com/rust-lang/cargo/issues/8519).
name = "nil_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# macOS no-sudo tunnel via a NetworkExtension System Extension (NEPacketTunnelProvider, shared with
# iOS through the `nil-apple` engine). OFF by default: the default macOS build keeps the in-process
# datapath so a half-finished system extension never regresses the working tunnel. When on, the
# client builds the `extension` module + the `extension_connect` redeem command on macOS, mirroring
# mobile (the redeem stays in the app; only node endpoint + measurement + grant cross to the SE).
macos-system-extension = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri stack (kept at the template's versions; not centralized in the workspace).
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Shared NIL crates — the client reuses the exact same code as the services, so the
# client and node can never drift on the wire format (architecture spec §3).
# Base (mobile-safe): just the Transport trait + loopback. The heavy MASQUE/QUIC transports
# and the OS datapath are pulled in only on desktop (see the [target.…] section below), so the
# iOS/Android cross-compile stays light — mobile uses a NEPacketTunnelProvider/VpnService
# datapath built separately.
nil-core = { workspace = true }
nil-proto = { workspace = true }
nil-transport = { workspace = true }
nil-crypto = { workspace = true }   # Phase 2: recovery-phrase validation, RA-TLS, PQ
nil-attest = { workspace = true }   # Phase 2: client-side attestation verification

# Async + errors (aligned with the workspace).
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }   # structured logs (no node address — privacy)

# HTTP to the Portal. rustls (not OpenSSL) to match the project's TLS standard.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
getrandom = { workspace = true }   # fresh random token-message nonce (client-side blinding)

# Desktop only: the real MASQUE/PQ-WireGuard transports + the OS datapath (TUN, routing,
# fail-closed kill-switch) and the shared `launch` builder the engine uses to bring up a real
# tunnel. Target-gated so mobile builds never pull quiche/boringtun/tun-rs.
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
nil-transport = { workspace = true, features = ["masque", "pqwg"] }
nil-datapath = { workspace = true, features = ["launch"] }
