[package]
name = "nil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN headless client: brings up a MASQUE tunnel through a node (Linux/Docker test client + CLI)."

[dependencies]
nil-core = { workspace = true }
nil-transport = { workspace = true, features = ["masque", "dev-insecure"] }
nil-datapath = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
