[package]
name = "nil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN headless client: brings up a MASQUE tunnel through a node (Linux/Docker test client + CLI)."

[features]
# Test/dev only: accept the node's synthetic attestation report (Docker harness). A release
# nil-cli never enables this, so synthetic reports are rejected as an unsupported TEE.
synthetic-attest = ["nil-transport/synthetic-attest"]

[dependencies]
nil-core = { workspace = true }
nil-transport = { workspace = true, features = ["masque"] }
nil-datapath = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
