[package]
name = "nil-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN Control plane: node registry, trust-split path selection, token verifier."

[features]
default = []
# Clustered, cross-instance nullifier set (PgNullifierStore) for multi-coordinator deployments.
# Off by default — the default build ships the file-backed DurableSet and pulls no DB driver.
postgres = ["dep:tokio-postgres"]

[dependencies]
nil-core = { workspace = true }     # durable nullifier set (restart-safe single-use)
nil-proto = { workspace = true }
nil-crypto = { workspace = true }   # Privacy Pass token verifier (public key only)
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }  # the swappable NullifierStore trait
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Clustered nullifier set (PgNullifierStore), behind the `postgres` feature.
tokio-postgres = { workspace = true, optional = true }

[dev-dependencies]
# Router-level tests (oneshot a Request through the axum Router) — mirrors nil-portal.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
