[package]
name = "nil-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN Control plane: node registry, trust-split path selection, token verifier."

[features]
default = []
# Clustered, cross-instance redemption ledger for multi-coordinator deployments.
# Off by default — the default build ships the process-locked file ledger and pulls no DB driver.
postgres = ["dep:tokio-postgres"]

[dependencies]
nil-core = { workspace = true }     # grants plus canonical encoding helpers
nil-proto = { workspace = true }
nil-crypto = { workspace = true }   # Privacy Pass token verifier (public key only)
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
getrandom = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
async-trait = { workspace = true }  # the swappable NullifierStore trait
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }
aes-gcm = { version = "0.11", features = ["zeroize"] }
# Clustered redemption ledger (PgNullifierStore), behind the `postgres` feature.
tokio-postgres = { workspace = true, optional = true }

[dev-dependencies]
# Router-level tests (oneshot a Request through the axum Router) — mirrors nil-portal.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
