[package]
name = "nil-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN shared domain types and errors (no I/O)."

[dependencies]
serde = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
url = "2"
