[package]
name = "nil-datapath"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NIL VPN client datapath: TUN device, routing, fail-closed kill-switch, and the packet pump tying a Transport to the OS."

[features]
# The shared `launch` builder (env -> transport + TunnelConfig), reused by nil-cli and the
# desktop GUI engine so they never drift. Pulls the MASQUE / PQ-WireGuard transports. Off by
# default so a consumer needing only the Tunnel/pump over an externally-built transport stays light.
launch = ["nil-transport/masque", "nil-transport/pqwg"]
# Test/dev only: also accept the node's synthetic attestation report (Docker harness).
synthetic-attest = ["launch", "nil-transport/synthetic-attest"]

[dependencies]
nil-core = { workspace = true }
nil-transport = { workspace = true }   # the Transport trait (masque/pqwg pulled by `launch`)
tun-rs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
getrandom = { workspace = true }       # per-connection attestation freshness nonce
anyhow = { workspace = true }
tracing = { workspace = true }
